# fc

./: Makefile  config.h  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  fc.c
src/.deps/: fc.Po
